# Ecotech

./: INSTALL.md  LICENSE  README.md  ecotech.db  pyproject.toml  run.py
ecotech/: __init__.py
ecotech/application/: __init__.py  factories.py  services.py
ecotech/domain/: __init__.py  descarte.py  dispositivos.py  estados.py  relatorio.py  tratamento.py  usuarios.py
ecotech/infrastructure/: __init__.py  web.py
ecotech/infrastructure/persistence/: dados.py
ecotech/infrastructure/static/css/: style.css
ecotech/infrastructure/static/images/: google-cloud-logo-vector-cloud-platform-with-silver-background-vector_981536-439.avif
ecotech/infrastructure/static/js/: main.js
ecotech/infrastructure/templates/: base.html  criar_conta.html  dashboard.html  detalhes_solicitacao.html  index.html  login.html  notificacoes.html  nova_solicitacao.html  operacoes.html  perfil.html  pontos_coleta.html  relatorios.html  saque.html  ultimas_entregas.html  usuarios.html
tests/: __init__.py  test_descarte.py  test_dispositivos.py  test_estados.py  test_factories.py  test_tratamento.py  test_usuarios.py
